# wbemtools

./: README.md
wbem-sharp/: AUTHORS  COPYING  Makefile.am  RnT-auto.sh  autogen.sh  configure.ac  roadmap.txt  wbem-sharp.sln
wbem-sharp/doc/: Makefile.am  wbem-sharp.xml
wbem-sharp/doc/MonoDoc/: Makefile.am
wbem-sharp/examples/: ExampleRunner.csproj  IniReader.cs  Program.cs  examples.ini
wbem-sharp/examples/Properties/: AssemblyInfo.cs
wbem-sharp/examples/advanced/: AdvancedBatch.cs  AdvancedCreateClass.cs  AdvancedCreateInstance.cs  AdvancedDeleteClass.cs  AdvancedDeleteInstance.cs  AdvancedModifyClass.cs  AdvancedModifyInstance.cs
wbem-sharp/examples/basic/: BasicEnumerateClassNames.cs  BasicEnumerateClasses.cs  BasicEnumerateInstanceNames.cs  BasicEnumerateInstances.cs  BasicEnumerateNamespaces.cs  BasicGetClass.cs  BasicGetInstance.cs
wbem-sharp/src/: Makefile.am  README-NUNIT  WbemClient.cs  WbemClientTest.cs  WbemSharpTests.cs  wbem-sharp.csproj
wbem-sharp/src/BaseDataTypes/: BaseCollection.cs  BaseDataTypeList.cs  BaseNullable.cs
wbem-sharp/src/Batch/: BatchRequest.cs  BatchResponse.cs  SingleRequest.cs  SingleResponse.cs
wbem-sharp/src/CimDataTypes/: CimClass.cs  CimClassMember.cs  CimClassName.cs  CimClassNamePath.cs  CimClassPath.cs  CimClassTest.cs  CimDateTime.cs  CimInstance.cs  CimInstanceName.cs  CimInstanceNamePath.cs  CimInstancePath.cs  CimKeyBinding.cs  CimKeyValue.cs  CimMethod.cs  CimMethodResponse.cs  CimName.cs  CimNamedInstance.cs  CimNamespacePath.cs  CimObject.cs  CimObjectName.cs  CimObjectPath.cs  CimParameter.cs  CimParameterArray.cs  CimParameterRefArray.cs  CimParameterReference.cs  CimParameterValue.cs  CimProperty.cs  CimPropertyArray.cs  CimPropertyReference.cs  CimPropertyTest.cs  CimQualifier.cs  CimQualifierDeclaration.cs  CimQualifierFlavor.cs  CimReturnValue.cs  CimScope.cs  CimTable.cs  CimTreeNode.cs  CimType.cs  CimValueReference.cs  CimXmlHeader.cs  (+4 more)
wbem-sharp/src/CimXml/: CimXmlReader.cs  CimXmlWriter.cs  CreateRequest.cs  ParseResponse.cs
wbem-sharp/src/Collections/: CimClassList.cs  CimClassNamePathList.cs  CimClassPathList.cs  CimInstanceList.cs  CimInstanceNameList.cs  CimInstanceNamePathList.cs  CimInstancePathList.cs  CimKeyBindingList.cs  CimMethodList.cs  CimNameList.cs  CimObjectPathList.cs  CimParameterList.cs  CimParameterValueList.cs  CimPropertyList.cs  CimPropertyReferenceList.cs  CimQualifierDeclarationList.cs  CimQualifierList.cs  CimTreeNodeList.cs  CimValueList.cs
wbem-sharp/src/Net/: CimomRequest.cs  CimomResponse.cs
wbem-sharp/src/OpSettings/: AssociatorNamesOpSettings.cs  AssociatorsOpSettings.cs  CreateClassOpSettings.cs  CreateInstanceOpSettings.cs  DeleteClassOpSettings.cs  DeleteInstanceOpSettings.cs  DeleteQualifierOpSettings.cs  EnumerateClassNamesOpSettings.cs  EnumerateClassesOpSettings.cs  EnumerateInstanceNamesOpSettings.cs  EnumerateInstancesOpSettings.cs  EnumerateLeafClassesOpSettings.cs  EnumerateQualifiersOpSettings.cs  ExecQueryOpSettings.cs  ExecuteQueryOpSettings.cs  GetClassOpSettings.cs  GetInstanceOpSettings.cs  GetPropertyOpSettings.cs  GetQualifierOpSettings.cs  InvokeMethodOpSettings.cs  ModifyClassOpSettings.cs  ModifyInstanceOpSettings.cs  OpSettingsClasses.cs  ReferenceNamesOpSettings.cs  ReferencesOpSettings.cs  SetPropertyOpSettings.cs  SetQualifierOpSettings.cs
wbem-sharp/src/Properties/: AssemblyInfo.cs
wbem-sharp/submitted_bugs/: XB79561.cs  XB79575.cs
wbem-sharp/tests/nunit/: FakeCimom.cs  Program.cs  WbemClientTest.cs  wbem-tests.csproj
wbem-sharp/tests/nunit/OpSettings/: AssociatorNamesOpSettingsTest.cs  GetClassOpSettingsTest.cs
wbem-sharp/tests/nunit/Properties/: AssemblyInfo.cs
wbem-win-gui/: DataGridViewUtils.cs  DemoGui.csproj  DemoGui.sln  GuiSpecs.txt  KeyBindingSet.cs  ListViewUtils.cs  MSXml.cs  Main.cs  TreeNodeUtils.cs
wbem-win-gui/Forms/: AuthForm.Designer.cs  AuthForm.cs  BaseKeyClassForm.Designer.cs  BaseKeyClassForm.cs  BaseKeyClassForm.resx  CimComboBox.cs  CimComboBox.resx  CimDataTypeForm.cs  CimDataTypeForm.designer.cs  CimDataTypeForm.resx  CimInstanceForm.Designer.cs  CimInstanceForm.cs  CimInstanceForm.resx  CimMethodForm.Designer.cs  CimMethodForm.cs  CimParameterForm.cs  CimParameterForm.designer.cs  CimPropertyForm.Designer.cs  CimPropertyForm.cs  CimQualifierForm.Designer.cs  CimQualifierForm.cs  HelpForm.Designer.cs  HelpForm.cs  MainForm.Designer.cs  MainForm.cs  MainForm.resx  NamespaceForm.Designer.cs  NamespaceForm.cs  NewInstanceForm.Designer.cs  NewInstanceForm.cs  ProgressForm.Designer.cs  ProgressForm.cs  QueryForm.Designer.cs  QueryForm.cs  XmlVisualizerForm.Designer.cs  XmlVisualizerForm.cs
wbem-win-gui/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
wbem-win-gui/html/: OmcWbemHelp.html  doc2.xslt  status.html  style.css
